# Google-Drive-Agentic-RAG

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml
app/: config.py  domain.py  fastapi.py  hybrid_search.py  streamlit.py  worker.py
app/db/: chroma.py  sqlite.py
app/drive/: connect.py  google_auth.py  init_data.py  sync_files.py
app/llm/: agent.py  llm.py  tool_registry.py  tools.py
app/rag/: chunking.py  citation.py  embedding.py  hybrid_search.py  reranking.py
eval/: 1_gen_and_init_testdb.py  2_gen_labeled_data.py  3_retrieval_eval.ipynb  config.py  llm.py  test_data_labeled.json
eval/utils/: chroma.py  chunks_db.py
llm/: tools.py
tests/: test_chroma.py  test_citation.py
tests/chroma_data/: chroma.sqlite3
