[project]
name = "google-drive-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "ipykernel>=7.3.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tavily>=1.1.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]
